--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "express-handlebars": "^3.1.0",
     "js-money-input": "^1.1.2",
     "mysql2": "^1.6.5",
+    "onesignal": "^0.1.2",
+    "onesignal-node": "^3.0.0",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
