--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.0",
     "js-money-input": "^1.1.2",
     "mysql2": "^1.6.5",
+    "onesignal-node": "^3.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.8.6"
